Closed Bug 1525874 Opened 5 years ago Closed 5 years ago

[Linux/Gtk+] When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask

Categories

(Core :: Widget: Gtk, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox66 --- fixed
firefox67 --- fixed

People

(Reporter: stransky, Assigned: stransky)

Details

Attachments

(1 file)

When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask. Will be useful for testing purposed and also enables aliased round corners drawing (Bug 1522774).

Pushed by opoprus@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/7e88e78b3898
[Linux/Gtk+] When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask, r=lsalzman

Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67

Comment on attachment 9042057 [details]
Bug 1525874 - [Linux/Gtk+] When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask, r=lsalzman

Beta/Release Uplift Approval Request

  • Feature/Bug causing the regression: None
  • User impact if declined: We need this one as a prerequisite of Bug 1529713
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Linux/Gtk+ only. Adding a pref should not affect us.
  • String changes made/needed: none
Attachment #9042057 - Flags: approval-mozilla-beta?

Comment on attachment 9042057 [details]
Bug 1525874 - [Linux/Gtk+] When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask, r=lsalzman

Should only affect GTK; OK for beta 13 uplift.

Attachment #9042057 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: