Bug 1525874 - [Linux/Gtk+] When mozilla.widget.use-argb-visuals is set disable toplevel window shape mask, r=lsalzman a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D18947